fixed aligning issues

--- a/css/main.css
+++ b/css/main.css
@@ -37,6 +37,13 @@ ul {
   list-style-type: none;
   margin: 0;
   padding: 0;
+  padding-bottom: 5px;
+}
+
+.clearfix::after {
+  content: " ";
+  display: table;
+  clear: both;
 }
 
 li {
@@ -49,11 +56,53 @@ a:link {
   color: #6c8fe0;
   text-decoration: none;
   display: block;
-  padding: .5em .75em;
+  padding: .75em;
   font-size: 1.125rem;
 }
 
 a:hover {
   background-color: #6c8fe0;
   color: #fff;
+}
+
+@media only screen and (min-width: 25em) {
+
+  li {
+    float: left;
+    display: inline-block;
+    width: 50%;
+    text-align: center;
+  }
+}
+
+@media only screen and (min-width: 38em) {
+
+  li {
+    width: 25%;
+  }
+}
+
+@media only screen and (min-width: 60em) {
+
+  header {
+    padding: .75em;
+  }
+
+  h1 {
+    float: left;
+    display: inline-block;
+    padding: .3em 0;
+  }
+
+  ul {
+    float: right;
+    display: inline-block;
+    min-width: 40em;
+    padding-bottom: 0;
+  }
+}
+
+@media only screen and (min-width: 90em) {
+
+
 }
